# SelfClean

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint  Dockerfile  Makefile  README.md  common.mk  pyproject.toml  requirements.txt  setup.py  update_dependencies.py
.github/workflows/: pytest-coverage.yml  upload-to-pip.yml
assets/pre_trained_models/DINO-ImageNette/checkpoints/: model_best.pth
assets/pre_trained_models/DINO-OxfordIIITPet/checkpoints/: model_best.pth
examples/: Investigate_Flowers102.ipynb  Investigate_Imagenette.ipynb  Investigate_OxfordIIITPet.ipynb
selfclean/: __init__.py
selfclean/cleaner/: base_cleaner.py  selfclean.py  selfclean_cleaner.py
selfclean/cleaner/label_errors/: intra_extra_distance_mixin.py
selfclean/cleaner/near_duplicates/: embedding_distance_mixin.py
selfclean/cleaner/off_topic_samples/: base_off_topic_mixin.py  lad_mixin.py  quantile_off_topic_mixin.py
selfclean/distances/: projective_distance.py
selfclean/scoring/: lad_scoring.py
selfclean/utils/: data_downloading.py  plotting.py
src/: __init__.py
src/cleaner/: auto_cleaning_mixin.py  base_cleaner.py  issue_manager.py  selfclean.py  selfclean_cleaner.py
src/cleaner/irrelevants/: base_irrelevant_mixin.py  lad_mixin.py  quantile_irrelevant_mixin.py
src/cleaner/label_errors/: base_label_error_mixin.py  intra_extra_distance_mixin.py
src/cleaner/near_duplicates/: base_near_duplicate_mixin.py  embedding_distance_mixin.py
src/cleaner/off_topic_samples/: quantile_off_topic_mixin.py
src/scoring/: lad_scoring.py
src/utils/: paths.py  plotting.py  utils.py  utils_proba.py
tests/integration_tests/: test_selfclean_IT.py
tests/testutils/: paths.py
tests/unittests/cleaner/: test_auto_cleaning.py  test_issue_manager.py  test_selfclean_cleaner.py
tests/unittests/cleaner/irrelevants/: test_lad_scoring.py
tests/unittests/cleaner/label_errors/: test_intra_extra_distance.py
tests/unittests/cleaner/near_duplicates/: test_embedding_distance.py
tests/unittests/cleaner/off_topic_samples/: test_lad_scoring.py
tests/unittests/utils/: test_utils.py
